--- a/force-app/main/default/classes/CTLocationController.cls
+++ b/force-app/main/default/classes/CTLocationController.cls
@@ -2,7 +2,7 @@
  * @description       : 
  * @author            : Hanna Makhovska
  * @group             : 
- * @last modified on  : 03-29-2024
+ * @last modified on  : 03-30-2024
  * @last modified by  : Hanna Makhovska
 **/
 public with sharing class CTLocationController {
@@ -55,6 +55,36 @@ public with sharing class CTLocationController {
         }
 
         return statusCountMap;
+    }
 
+    public static void updateRedScore(Set<Id> locationIds){
+        List<Location__c> locationToUpdate = new List<Location__c>();
+        AggregateResult[] redPeoplePerLocation = [SELECT Location__c, COUNT(Id) total 
+                                                    FROM Location_Tracing__c 
+                                                    WHERE Person__r.Health_Status__c = 'Red' AND Visit_Date__c = LAST_N_DAYS:10 AND Location__c IN :locationIds 
+                                                    GROUP BY Location__c];
+
+        for(AggregateResult ar : redPeoplePerLocation){
+            String locationId = String.valueOf(ar.get('Location__c'));
+            Integer redScore = Integer.valueOf(ar.get('total'));
+            String status = getStatus(redScore);
+            locationToUpdate.add(new Location__c(Id=locationId, Red_Score__c=redScore, Status__c=status));
+        }
+
+        if(locationToUpdate != null && locationToUpdate.size() > 0){
+            update locationToUpdate;
+        }
+    }
+
+    public static String getStatus(Integer redScore){
+        if(redScore == 0){
+            return 'Green';
+        }else if(redScore <= 5){
+            return 'Yellow';
+        }else if(redScore <= 10){
+            return 'Orange';
+        }else{
+            return 'Red';
+        }
     }
 }
